; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_qeth_l3_main.c_qeth_l3_iqd_read_initial_mac.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_qeth_l3_main.c_qeth_l3_iqd_read_initial_mac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qeth_card = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.qeth_cmd_buffer = type { i64 }
%struct.qeth_ipa_cmd = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

@SETUP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"hsrmac\00", align 1
@IPA_CMD_CREATE_ADDR = common dso_local global i32 0, align 4
@QETH_PROT_IPV6 = common dso_local global i32 0, align 4
@IPA_PDU_HEADER_SIZE = common dso_local global i64 0, align 8
@qeth_l3_iqd_read_initial_mac_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qeth_card*)* @qeth_l3_iqd_read_initial_mac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qeth_l3_iqd_read_initial_mac(%struct.qeth_card* %0) #0 {
  %2 = alloca %struct.qeth_card*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.qeth_cmd_buffer*, align 8
  %5 = alloca %struct.qeth_ipa_cmd*, align 8
  store %struct.qeth_card* %0, %struct.qeth_card** %2, align 8
  store i32 0, i32* %3, align 4
  %6 = load i32, i32* @SETUP, align 4
  %7 = call i32 @QETH_DBF_TEXT(i32 %6, i32 2, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.qeth_card*, %struct.qeth_card** %2, align 8
  %9 = load i32, i32* @IPA_CMD_CREATE_ADDR, align 4
  %10 = load i32, i32* @QETH_PROT_IPV6, align 4
  %11 = call %struct.qeth_cmd_buffer* @qeth_get_ipacmd_buffer(%struct.qeth_card* %8, i32 %9, i32 %10)
  store %struct.qeth_cmd_buffer* %11, %struct.qeth_cmd_buffer** %4, align 8
  %12 = load %struct.qeth_cmd_buffer*, %struct.qeth_cmd_buffer** %4, align 8
  %13 = getelementptr inbounds %struct.qeth_cmd_buffer, %struct.qeth_cmd_buffer* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @IPA_PDU_HEADER_SIZE, align 8
  %16 = add nsw i64 %14, %15
  %17 = inttoptr i64 %16 to %struct.qeth_ipa_cmd*
  store %struct.qeth_ipa_cmd* %17, %struct.qeth_ipa_cmd** %5, align 8
  %18 = load %struct.qeth_card*, %struct.qeth_card** %2, align 8
  %19 = getelementptr inbounds %struct.qeth_card, %struct.qeth_card* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.qeth_ipa_cmd*, %struct.qeth_ipa_cmd** %5, align 8
  %23 = getelementptr inbounds %struct.qeth_ipa_cmd, %struct.qeth_ipa_cmd* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 6
  store i32 %21, i32* %27, align 4
  %28 = load %struct.qeth_card*, %struct.qeth_card** %2, align 8
  %29 = load %struct.qeth_cmd_buffer*, %struct.qeth_cmd_buffer** %4, align 8
  %30 = load i32, i32* @qeth_l3_iqd_read_initial_mac_cb, align 4
  %31 = call i32 @qeth_send_ipa_cmd(%struct.qeth_card* %28, %struct.qeth_cmd_buffer* %29, i32 %30, i32* null)
  store i32 %31, i32* %3, align 4
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @QETH_DBF_TEXT(i32, i32, i8*) #1

declare dso_local %struct.qeth_cmd_buffer* @qeth_get_ipacmd_buffer(%struct.qeth_card*, i32, i32) #1

declare dso_local i32 @qeth_send_ipa_cmd(%struct.qeth_card*, %struct.qeth_cmd_buffer*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
